# constapel

./: .gitignore  Cargo.toml  LICENSE  README.md  test.json  test.yaml
src/: bin.rs  cli.rs  constapel.rs  file_creator.rs  lib.rs  main.rs  parse.rs  prelude.rs  result.rs  utils.rs
src/file_types/: css.rs  js.rs  mod.rs  scss.rs
tests/: css.rs  parsing.rs  test.rs
