[package]
name = "constapel"
version = "0.1.0"
authors = ["Mathias Ivar Iversen <work@mathiasiversen.com>"]
edition = "2018"
description = "A program to maintain constants throughout a web application."
keywords = ["constants", "web", "css", "scss", "js"]
license = "MIT"
repository = "https://github.com/mathiversen/constapel"

[dependencies]
serde = "1.0.99"
serde_json = "1.0.40"
structopt = "0.2.18"
