[package]
name = "constapel"
version = "0.1.1"
authors = ["Mathias Ivar Iversen <work@mathiasiversen.com>"]
edition = "2018"
description = "A program to maintain constants throughout a web application."
keywords = ["constants", "web", "css", "scss", "js"]
license = "MIT"
repository = "https://github.com/mathiversen/constapel"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.2.18"
